# superposition_awareness

./: README.md  pyproject.toml
experiments/: olmo3_pairwise_pooled_sequence_recovery.py  olmo3_pooled_sequence_recovery.py  olmo3_pooled_token_recovery.py  olmo3_same_text_tokenization_detection.py  olmo3_tokenization_detection.py  olmo3_visible_tokenization_detection.py  olmo_pooled_token_recovery.py
slurm/: run_olmo3_pairwise_pooled_sequence_recovery.sbatch  run_olmo3_pooled_sequence_recovery.sbatch  run_olmo3_pooled_token_recovery.sbatch  run_olmo3_same_text_tokenization_detection.sbatch  run_olmo3_tokenization_detection.sbatch  run_olmo3_visible_tokenization_detection.sbatch  run_olmo_pooled_token_recovery.sbatch
src/superposition_awareness/: __init__.py  tokenization.py
