[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "superposition-awareness"
version = "0.1.0"
description = "Experiments for probing pooled-token recovery in OLMo models."
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.10.0",
  "safetensors>=0.5.0",
  "torch>=2.8.0",
  "transformers>=4.56.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/superposition_awareness"]

[tool.uv]
package = true
